k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freetech-webshell
  labels:
    app: freetech-webshell
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: freetech-webshell
  template:
    metadata:
      labels:
        app: freetech-webshell
    spec:
      containers:
        - name: freetech-webshell
          image: ghcr.io/cyrildesch/freetech-webshell:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
